--- a/website/templates/Jeu1-choix.jinja
+++ b/website/templates/Jeu1-choix.jinja
@@ -1,8 +1,10 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content
 %}
 
 <div class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn" style="max-width:450px; width:90%; min-width:310px;">
-<header class="w3-text-white w3-padding medium" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
+<header class="w3-text-white w3-padding medium" style="background-color:{{ game.config["theme_colors"][0] }}">
     Combien de tiquets voulez-vous mettre en jeu ?
 </header>
 <form method="POST">
@@ -30,7 +32,7 @@
 <option value="19">19 tickets</option>
 <option value="20">20 tickets</option>
 </select>
-<button type="submit" class="w3-button w3-large w3-text-white" style="background-color:{{engine.current_game.config["theme_colors"][0]}}" name="boutton" value="jeu1-choix">Valider</button></form>
+<button type="submit" class="w3-button w3-large w3-text-white" style="background-color:{{ config["theme_colors"][0] }}" name="boutton" value="jeu1-choix">Valider</button></form>
 </div>
 
 {% endblock %}
