--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -1,21 +1,23 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 2{% endblock %} {% block content
 %}
 
 <div id="card2" class="w3-card-4 w3-center w3-white animate__animated animate__fadeIn">
-<header class="w3-text-white medium w3-padding" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
+<header class="w3-text-white medium w3-padding" style="background-color:{{ config["theme_colors"][0] }}">
     Choisissez un nombre
 </header>
 <form method="POST">
   <div class="w3-margin w3-lobster">
-    {% for i in range(5) %}
-      {% if player.choice == i+1 %}
-      <button type="submit" name="boutton" value={{i+1}} class="circle w3-grayscale" style="background-color: #bff5ea;" disabled>{{i+1}}</button>
+    {% for choice in range(1, 6) %}
+      {% if player.choice == prize %}
+      <button type="submit" name="boutton" value={{ choice }} class="circle w3-grayscale" style="background-color: #bff5ea;" disabled>{{ choice }}</button>
       {% else %}
-      <button type="submit" name="boutton" value={{i+1}} class="circle w3-hover-opacity" style="background-color: #bff5ea;">{{i+1}}</button>
+      <button type="submit" name="boutton" value={{ choice }} class="circle w3-hover-opacity" style="background-color: #bff5ea;">{{ choice }}</button>
       {% endif %}
     {% endfor %}
   </div>
-  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">Valider</button></p>
+  <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
   </form>
 </div>
 
