--- a/website/templates/Jeu3-choix.jinja
+++ b/website/templates/Jeu3-choix.jinja
@@ -1,11 +1,13 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 3{% endblock %} {% block content%}
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 3{% endblock %} {% block content%}
 
 <form method="POST" class="w3-card-4 w3-center w3-white w3-text-white animate__animated animate__fadeIn">
-<header class="w3-padding medium" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
+<header class="w3-padding medium" style="background-color:{{ config["theme_colors"][0] }}">
     Combien shouaitez vous investir ?
 </header>
 <p><input class="w3-input w3-border w3-round-large w3-center w3-large" placeholder="Montant" name="montant" type="number" style="width:120px; display:inline-block;"></p>
-<button type="submit" name="boutton" value="Jeu3-choix" class="w3-button w3-large" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">Valider</button>
+<button type="submit" name="boutton" value="Jeu3-choix" class="w3-button w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button>
 <p>
 </form>
 
