--- a/website/templates/Jeu4-reveal.jinja
+++ b/website/templates/Jeu4-reveal.jinja
@@ -1,24 +1,28 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% set prizes = game.current_prizes %}
+{% set reveal_state = game.current_reveal_state %}
+{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 4{% endblock %} {% block content
 %}
 <div class="w3-display-middle w3-center animate__animated animate__fadeIn" style="width:320px;">
   <div class="w3-margin-bottom" style="display:flex; justify-content:space-between;">
   
-	{% for i in range(2) %}
+	{% for player_it in engine.players[0:2] %}
     <div class="flip-card" style="width:150px; height:120px;">
-      <div id="card{{i}}" {% if engine.current_game.current_reveal_state[i] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{engine.players[i].color}};">
-          <h4><b>{{engine.players[i].name}}</b></h4>
+      <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
+        <div class="flip-card-front" style="background-color:{{ player_it.color }};">
+          <h4><b>{{ player_it.name}}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{engine.players[i].color}};">
-          <h4><b>{{engine.players[i].name}}</b></h4>
-			{% if engine.current_game.current_prizes[engine.players[i].choice] == "star" %}
-			  {% if engine.players[i].choice == 3 %}
-				<div class="w3-xlarge w3-padding w3-margin w3-text-teal" style="background-color:{{engine.players[i].sec_color}}"><i class="fa fa-star"></i></div>
+        <div class="flip-card-back" style="background-color:{{ player_it.color }};">
+          <h4><b>{{ player_it.name }}</b></h4>
+			{% if prizes[player_it.choice] == "star" %}
+			  {% if engine.player_it.choice == 3 %}
+				<div class="w3-xlarge w3-padding w3-margin w3-text-teal" style="background-color:{{ player_it.sec_color }}"><i class="fa fa-star"></i></div>
 			  {% else %}
-				<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{engine.players[i].sec_color}}"><i class="fa fa-star"></i></div>
+				<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ player_it.sec_color }}"><i class="fa fa-star"></i></div>
 			  {% endif %}
 			{% else %}
-			<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{engine.players[i].sec_color}}">{{engine.current_game.current_prizes[engine.players[i].choice]}} <img src="/static/images/coin.png" style="width:22px" alt="Coin"></div>
+			<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ player_it.sec_color }}">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" style="width:22px" alt="Coin"></div>
 			{% endif %}
         </div>
       </div>
@@ -28,22 +32,22 @@
   </div>
   <div class="w3-margin-bottom" style="display:flex; justify-content:space-between;">
   
-    {% for i in range(2) %}
+    {% for player_it in engine.players[2:4] %}
     <div class="flip-card" style="width:150px; height:120px;">
-      <div id="card{{i+2}}" {% if engine.current_game.current_reveal_state[i+2] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{engine.players[i+2].color}};">
-          <h4><b>{{engine.players[i+2].name}}</b></h4>
+      <div id="card{{ loop.index0 + 2 }}" {% if reveal_state[i+2] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
+        <div class="flip-card-front" style="background-color:{{ player_it.color }};">
+          <h4><b>{{ player_it.name }}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{engine.players[i+2].color}};">
-          <h4><b>{{engine.players[i+2].name}}</b></h4>
-			{% if engine.current_game.current_prizes[engine.players[i+2].choice] == "star" %}
-			  {% if engine.players[i+2].choice == 3 %}
-				<div class="w3-xlarge w3-padding w3-margin w3-text-teal" style="background-color:{{engine.players[i+2].sec_color}}"><i class="fa fa-star"></i></div>
+        <div class="flip-card-back" style="background-color:{{ player_it.color }};">
+          <h4><b>{{ player_it.name }}</b></h4>
+			{% if prizes[player_it.choice] == "star" %}
+			  {% if player_it.choice == 3 %}
+				<div class="w3-xlarge w3-padding w3-margin w3-text-teal" style="background-color:{{ player_it.sec_color }}"><i class="fa fa-star"></i></div>
 			  {% else %}
-				<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{engine.players[i+2].sec_color}}"><i class="fa fa-star"></i></div>
+				<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ player_it.sec_color }}"><i class="fa fa-star"></i></div>
 			  {% endif %}
 			{% else %}
-			<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{engine.players[i+2].sec_color}}">{{engine.current_game.current_prizes[engine.players[i+2].choice]}} <img src="/static/images/coin.png" style="width:22px" alt="Coin"></div>
+			<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ player_it.sec_color }}">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" style="width:22px" alt="Coin"></div>
 			{% endif %}
         </div>
       </div>
@@ -53,20 +57,20 @@
   </div>
   <div style="display:flex; justify-content:space-around;">
     <div class="flip-card" style="width:150px; height:120px;">
-      <div id="card{{4}}" {% if engine.current_game.current_reveal_state[4] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{engine.players[4].color}};">
-          <h4><b>{{engine.players[i].name}}</b></h4>
+      <div id="card{{4}}" {% if reveal_state[4] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
+        <div class="flip-card-front" style="background-color:{{ engine.players[4].color }};">
+          <h4><b>{{ engine.players[4].name }}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{engine.players[4].color}};">
-          <h4><b>{{engine.players[4].name}}</b></h4>
-			{% if engine.current_game.current_prizes[engine.players[4].choice] == "star" %}
+        <div class="flip-card-back" style="background-color:{{ engine.players[4].color }};">
+          <h4><b>{{ engine.players[4].name }}</b></h4>
+			{% if prizes[engine.players[4].choice] == "star" %}
 			  {% if engine.players[4].choice == 3 %}
-				<div class="w3-xlarge w3-padding w3-margin w3-text-teal" style="background-color:{{engine.players[4].sec_color}}"><i class="fa fa-star"></i></div>
+				<div class="w3-xlarge w3-padding w3-margin w3-text-teal" style="background-color:{{ engine.players[4].sec_color }}"><i class="fa fa-star"></i></div>
 			  {% else %}
-				<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{engine.players[4].sec_color}}"><i class="fa fa-star"></i></div>
+				<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ engine.players[4].sec_color }}"><i class="fa fa-star"></i></div>
 			  {% endif %}
 			{% else %}
-			<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{engine.players[4].sec_color}}">{{engine.current_game.current_prizes[engine.players[4].choice]}} <img src="/static/images/coin.png" style="width:22px" alt="Coin"></div>
+			<div class="w3-xlarge w3-padding w3-margin w3-text-white" style="background-color:{{ engine.players[4].sec_color }}">{{ prizes[engine.players[4].choice] }} <img src="/static/images/coin.png" style="width:22px" alt="Coin"></div>
 			{% endif %}
         </div>
       </div>
