--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -1,6 +1,5 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% set background = config["background"] %}
 
 <!DOCTYPE html>
 <html>
@@ -11,26 +10,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="{{url_for('static', filename="flouze.css")}}" type="text/css">
-    <link rel = "icon" href ="{{url_for('static', filename="images/coin.png")}}" type="image/x-icon">
+    <link rel="stylesheet" href="{{ url_for('static', filename="flouze.css") }}" type="text/css">
+    <link rel = "icon" href ="{{ url_for('static', filename="images/coin.png") }}" type="image/x-icon">
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 
-<body style="background-image: url({{ url_for('static', filename="images/" + config['background']) }}); min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start;">
+<body style="background-image: url({{ url_for("static", filename="images/" + config["background"]) }}); min-height: 100vh; display: flex; flex-direction: column; justify-content: flex-start;">
   <div class="w3-container w3-text-white" style="height:50px; background-color:{{ config["theme_colors"][0] }}">
-    <div class="w3-right huge"><span id="flouze">{{player.flouze}}</span> <img src="{{url_for('static', filename="images/coin.png")}}" class="coin-large" alt="Coin"></div>
+    <div class="w3-right huge"><span id="flouze">{{ player.flouze }}</span> <img src="{{ url_for('static', filename="images/coin.png") }}" class="coin-large" alt="Coin"></div>
   </div>
   {% if player.saved_flouze != 0 %}
-  <div class="w3-text-white w3-text-white large w3-round-large" style="text-align:right; padding:2px 16px; position:absolute; top:40px; right:0; background-color:{{ config["theme_colors"][0] }}">({{player.saved_flouze}} <img src="{{url_for('static', filename="images/coin.png")}}" class="coin-medium" alt="Coin">)</div>
+  <div class="w3-text-white w3-text-white large w3-round-large" style="text-align:right; padding:2px 16px; position:absolute; top:40px; right:0; background-color:{{ config["theme_colors"][0] }}">({{ player.saved_flouze }} <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin-medium" alt="Coin">)</div>
   <div style="height:28px">*</div>
   {% endif %}
 
 {% block inside %} {% endblock %}
 
   <div id="messages" class="toast">
-  {% with messages = get_flashed_messages(with_categories=true) %} {% if
-   messages %} {% for category, message in messages %}
-    {% if category == 'error' %}
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  {% if messages %} 
+  {% for category, message in messages %}
+    {% if category == "error" %}
     <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
       <i class="fa fa-exclamation-circle w3-text-red" style="margin-right: 6px;"></i>
       <div class="w3-center">{{ message }}</div>
@@ -49,7 +49,7 @@
   <script type="text/javascript" charset="utf-8">
     var socket = io();
     socket.on('connect', function() {
-        socket.emit('give_identity', '{{player.name}}');
+        socket.emit('give_identity', '{{ player.name }}');
     });
     socket.on('message', function(msg) {
         document.getElementById('messages').innerHTML += `
@@ -78,7 +78,7 @@
         }
     });
     socket.on('move_to_frame', function(frame_id) {
-        var frame     = document.querySelector("iframe");
+        var frame = document.querySelector("iframe");
         if (frame == null) return;
         var player = frame.contentWindow.sozi.player;
         player.moveToFrame(frame_id % player.presentation.frames.length);
