--- a/website/templates/en_attente.jinja
+++ b/website/templates/en_attente.jinja
@@ -1,8 +1,9 @@
-{% extends "base+don.html" %} {% block title %}Flouze{% endblock %} {% block content%}
+{% set game = engine.current_game %}
+{% extends "base+don.jinja" %} {% block title %}Flouze{% endblock %} {% block content%}
 
 <div class="w3-pale-blue w3-round-large w3-border w3-border-blue w3-center w3-padding animate__animated animate__fadeIn">
   <h5>En attente des autres joueurs</h5>
-  <h4 id="count">{{engine.current_game.current_waiting_count}} / 5</h4>
+  <h4 id="count">{{ game.current_waiting_count }} / 5</h4>
 </div>
 
 {% endblock %}
