--- a/website/templates/partager.jinja
+++ b/website/templates/partager.jinja
@@ -1,30 +1,32 @@
-{% extends "base+etoiles.html" %} {% block title %}Partager{% endblock %} {% block inside2%}
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% extends "base+etoiles.jinja" %} {% block title %}Partager{% endblock %} {% block inside2%}
 
   <div class="w3-large w3-card-4 w3-display-middle w3-white w3-center animate__animated animate__fadeIn" style="width:260px;">
-  <header id="total" class="w3-container w3-text-white w3-xlarge w3-padding" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">
-      <img src="{{url_for('static', filename="images/coin.png")}}" style="width:22px" alt="Coin"> &nbsp; à partager
+  <header id="total" class="w3-container w3-text-white w3-xlarge w3-padding" style="background-color:{{ engine.current_game.config["theme_colors"][0] }}">
+      <img src="{{ url_for("static", filename="images/coin.png") }}" style="width:22px" alt="Coin"> &nbsp; à partager
   </header>
   {% if player.last_profit < 0 %}
   <div class="w3-text-red"> <i class="fa fa-info-circle"></i> votre demande peut être refusée par les joueurs</div>
   {% endif %}
   <form method="POST">
-  {% for i in range(4) %}
-  <div class="w3-row" style="background-color:{{player.other_players[i].color}}; margin:8px">
-    <div class="w3-col w3-padding" style="width:120px;"><b>{{player.other_players[i].name}}</b></div>
-    <div class="w3-rest"><input id=sent{{i}} onchange="update_rest()" name={{player.other_players[i].name}} class="w3-input w3-border w3-round-large w3-center" value={{player.last_profit // 5}} type="number" style="width:99px; height:30px; margin-top:5px"></div>
+  {% for other_player in player.other_players %}
+  <div class="w3-row" style="background-color:{{ other_player.color }}; margin:8px">
+    <div class="w3-col w3-padding" style="width:120px;"><b>{{ player }}</b></div>
+    <div class="w3-rest"><input id=sent{{ loop.index0 }} onchange="update_rest()" name={{ other_player.name }} class="w3-input w3-border w3-round-large w3-center" value={{ player.last_profit // 5 }} type="number" style="width:99px; height:30px; margin-top:5px"></div>
   </div>
   {% endfor %}
-  <div class="w3-row" style="background-color:{{player.color}}; margin:8px">
-    <div class="w3-col w3-padding" style="width:120px;"><b>{{player.name}}</b></div>
+  <div class="w3-row" style="background-color:{{ player.color }}; margin:8px">
+    <div class="w3-col w3-padding" style="width:120px;"><b>{{ player.name }}</b></div>
     <div class="w3-rest w3-padding" id="rest"></div>
   </div>
     <button type="submit" name="boutton" value="en fait non" class="w3-button w3-red" style="margin:10px">en fait non</button>
-    <button type="submit" name="boutton" value="envoi partager" class="w3-button w3-text-white" style="margin:10px; background-color:{{engine.current_game.config["theme_colors"][0]}}">{% if player.last_profit < 0 %}Réclamer{% else %}Envoyer{% endif %}</button>
+    <button type="submit" name="boutton" value="envoi partager" class="w3-button w3-text-white" style="margin:10px; background-color:{{ config["theme_colors"][0] }}">{% if player.last_profit < 0 %}Réclamer{% else %}Envoyer{% endif %}</button>
 </form>
   </div>
 
 <script>
-  var total = {{player.last_profit}};
+  var total = {{ player.last_profit }};
   document.getElementById('total').innerHTML = total + document.getElementById('total').innerHTML
   document.getElementById('sent0').value = Math.floor(total/5)
   document.getElementById('sent1').value = Math.floor(total/5)
@@ -36,7 +38,7 @@
                                                     document.getElementById('sent0').value -
                                                     document.getElementById('sent1').value -
                                                     document.getElementById('sent2').value -
-                                                    document.getElementById('sent3').value + '&nbsp; <img src="{{url_for("static", filename="images/coin.png")}}" class="coin-small" alt="Coin">'
+                                                    document.getElementById('sent3').value + '&nbsp; <img src="{{ url_for("static", filename="images/coin.png") }}" class="coin-small" alt="Coin">'
   }
 </script>
 
