--- a/website/templates/quiz.jinja
+++ b/website/templates/quiz.jinja
@@ -1,13 +1,15 @@
-{% extends "base.html" %} {% block title %}QUIZ{% endblock %} {% block inside%}
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% extends "base.jinja" %} {% block title %}QUIZ{% endblock %} {% block inside%}
 
-<div class="w3-card-4 w3-center w3-display-middle w3-padding w3-large animate__animated animate__jackInTheBox" style="border-style:solid; border-width: 5px; border-color:{{engine.current_game.config["theme_colors"][0]}}; background-color:{{engine.current_game.config["theme_colors"][1][0]}}">
+<div class="w3-card-4 w3-center w3-display-middle w3-padding w3-large animate__animated animate__jackInTheBox" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1][0] }}">
 {% if input %}
 <form method="POST">
   <p><input name="réponse" class="w3-input w3-border w3-round-large w3-center" placeholder="Votre réponse" type="text" style="width:200px;"></p>
-  <p><button type="submit" name="boutton" value="quiz" class="w3-button w3-text-white" style="background-color:{{engine.current_game.config["theme_colors"][0]}}">Valider</button></p>
+  <p><button type="submit" name="boutton" value="quiz" class="w3-button w3-text-white" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
 </form>
 {% else %}
-  <p>{{player['question']}}</p>
+  <p>{{ player.question }}</p>
 {% endif %}
 </div>
 
