--- a/website/templates/title.jinja
+++ b/website/templates/title.jinja
@@ -1,8 +1,9 @@
-{% extends "base+don.html" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
+{% set game = engine.current_game %}
+{% set config = game.config %}
+{% extends "base+don.jinja" %} {% block title %}Flouze - Jeu 1{% endblock %} {% block content%}
 
-
-<div class="w3-card-4 w3-center animate__animated animate__zoomIn" style="background-color:{{engine.current_game.config["theme_colors"][1]}}">
-  <div class="w3-container w3-text-white" style="background-color:{{engine.current_game.config["theme_colors"][0]}}; margin:10px">
+<div class="w3-card-4 w3-center animate__animated animate__zoomIn" style="background-color:{{ config["theme_colors"][1] }}">
+  <div class="w3-container w3-text-white" style="background-color:{{ config["theme_colors"][0] }}; margin:10px">
     {% if engine.current_game_nb == 1 %}
       <h2>Premier jeu</h2>
     {% elif engine.current_game_nb == 2 %}
@@ -16,7 +17,7 @@
     {% endif %}
   </div>
 </div>
-<iframe src="{{url_for('static', filename='animations/Jeu1.sozi.html')}}" style="width: 100%;" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{engine.current_game.frame_id}} % player.presentation.frames.length);">
+<iframe src="{{ url_for("static", filename="animations/Jeu1.sozi.html") }}" style="width: 100%;" frameBorder="0" onload="var player = this.contentWindow.sozi.player; player.moveToFrame({{ game.frame_id }} % player.presentation.frames.length);">
   My Sozi presentation should play here.
 </iframe>
 
