--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -4,43 +4,39 @@
 {% set proposition = engine.current_game.current_proposition %}
 {% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %} {% block inside %}
 
-<div class="w3-display-middle w3-center w3-text-white animate__animated animate__fadeIn" style="width:500px;">
-  <header class="w3-container" style="background-color:{{ config["theme_colors"][0] }}">
-      <h4>{{ player.message }}</h4>
+<div class="w3-display-middle w3-center w3-white animate__animated animate__fadeIn" style="width:500px;">
+  <header class="w3-text-white w3-padding large" style="background-color:{{ config["theme_colors"][0] }}">
+      {{ player.message }}
   </header>
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
     {% for other_player in other_players[:2] %}
-    <div class="w3-card w3-xlarge w3-margin w3-padding w3-half w3-teal" style="width:150px; height:150px; background-color:{{ other_player.color }};">
-      <p><b>{{ other_player.name }}</b></p>
-      <div class="w3-padding w3-text-white w3-margin" style="background-color:{{ other_player.sec_color }};">{{ proposition[loop.index0] }}</div>
-      <div class="w3-padding w3-white w3-margin">
-        {% if other_player.choice == 0 %}
-        <p class="w3-text-red">Refusé</p>
-        {% else %}
-        <p class="w3-text-green">Accepté</p>
-        {% endif %}
-      </div>
+    <div class="w3-card w3-xlarge w3-margin w3-padding w3-half" style="width:150px; height:150px; background-color:{{ other_player.color }};">
+      <b>{{ other_player.name }}</b>
+      <div class="w3-padding-small w3-text-white " style="background-color:{{ other_player.sec_color }};">{{ proposition[loop.index0] }}</div>
+      {% if other_player.choice == 0 %}
+      <div class="w3-padding-small w3-white w3-text-red">Refusé</div>
+      {% else %}
+      <div class="w3-padding-small w3-white w3-text-green">Accepté</div>
+      {% endif %}
     </div>
     {% endfor %}
   </div>
   <div class="w3-margin-right w3-margin-left" style="display:flex; justify-content:space-around;">
     {% for other_player in other_players[2:4] %}
-    <div class="w3-card w3-xlarge w3-margin w3-padding w3-half w3-teal" style="width:150px; height:150px; background-color:{{ other_player.color }};">
-      <p><b>{{ other_player.name }}</b></p>
-      <div class="w3-padding w3-text-white w3-margin" style="background-color:{{ other_player.sec_color }};">{{ proposition[loop.index0 + 2] }}</div>
-      <div class="w3-padding w3-white w3-margin">
-        {% if other_player.choice == 0 %}
-        <p class="w3-text-red">Refusé</p>
-        {% else %}
-        <p class="w3-text-green">Accepté</p>
-        {% endif %}
-      </div>
+    <div class="w3-card w3-xlarge w3-margin w3-padding w3-half" style="width:150px; height:150px; background-color:{{ other_player.color }};">
+      <b>{{ other_player.name }}</b>
+      <div class="w3-padding-small w3-text-white" style="background-color:{{ other_player.sec_color }};">{{ proposition[loop.index0 + 2] }}</div>
+      {% if other_player.choice == 0 %}
+      <div class="w3-padding-small w3-white w3-text-red">Refusé</div>
+      {% else %}
+      <div class="w3-padding-small w3-white w3-text-green">Accepté</div>
+      {% endif %}
     </div>
     {% endfor %}
   </div>
   <div class="w3-container w3-center">
       <form method="POST">
-        <button type="submit" class="w3-btn w3-xlarge w3-padding" name="boutton" value="nouvelle proposition" style="background-color:{{ config["theme_colors"][0] }}">Faire une nouvelle proposition</button>
+        <button type="submit" class="w3-button w3-xlarge w3-margin w3-padding w3-text-white" name="boutton" value="nouvelle proposition" style="background-color:{{ config["theme_colors"][0] }}">Faire une nouvelle proposition</button>
       </form>
   </div>
 </div>
