--- a/website/templates/quiz.jinja
+++ b/website/templates/quiz.jinja
@@ -2,7 +2,8 @@
 {% set config = game.config %}
 {% extends "base.jinja" %} {% block title %}QUIZ{% endblock %} {% block inside%}
 
-<div class="w3-card-4 w3-center w3-display-middle w3-padding w3-large animate__animated animate__jackInTheBox" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1][0] }}">
+<div style="display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; flex-grow: 1">
+<div class="w3-card-4 w3-center w3-padding w3-large animate__animated animate__jackInTheBox" style="border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
 {% if input %}
 <form method="POST">
   <p><input name="réponse" class="w3-input w3-border w3-round-large w3-center" placeholder="Votre réponse" type="text" style="width:200px;"></p>
@@ -11,6 +12,7 @@
 {% else %}
   <p>{{ player.question }}</p>
 {% endif %}
+</div>
 </div>
 
 {% endblock %}
