--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -16,7 +16,7 @@
   <br><input name="quantité" class="w3-input w3-border w3-round-large w3-center" placeholder="Quantitée" type="number" style="width:120px; display:inline-block;">
   <p>
     <button type="submit" name="boutton" value="envoyer etoile" class="w3-margin-right w3-button" style="background-color:{{ config["theme_colors"][0] }}">Envoyer</button>
-    <button type="submit" name="boutton" value="terminer" class="w3-margin-left w3-button w3-red">Terminer</button>
+    <button type="submit" name="boutton" value="retour don etoiles" class="w3-margin-left w3-button">Retour</button>
   </p>
   <p>
 </form>
