passive choice of prize

--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -10,11 +10,7 @@
 <form method="POST">
   <div class="w3-margin w3-lobster">
     {% for choice in range(1, 6) %}
-      {% if player.choice == choice %}
-      <button type="submit" name="boutton" value={{ choice }} class="circle w3-grayscale" style="background-color: #bff5ea;" disabled>{{ choice }}</button>
-      {% else %}
-      <button type="submit" name="boutton" value={{ choice }} class="circle w3-hover-opacity" style="background-color: #bff5ea;">{{ choice }}</button>
-      {% endif %}
+      <label class="circle w3-hover-opacity"><input type="radio" name="choice" value={{ choice }} onchange="update_choice(this)"/>{{ choice }}</label>
     {% endfor %}
   </div>
   <p><button type="submit" name="boutton" value="validate num" class="w3-button w3-text-white w3-large" style="background-color:{{ config["theme_colors"][0] }}">Valider</button></p>
