--- a/website/static/flouze.css
+++ b/website/static/flouze.css
@@ -239,16 +239,21 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .huge{font-size:33px!important}
 
 .coin-small{width:20px!important; position:relative; top:4px}
-.coin-medium{width:25px!important; position:relative; top:4px}
+.coin-medium{width:25px!important; position:relative; top:5px}
 .coin-large{width:27px!important; position:relative; top:4px}
 
 .toast{position:absolute; bottom:5px; display:flex; flex-direction: column; align-items:center; width:100%; font-size:18px;}
 
-.circle {border-radius: 50%;width: 55px;height: 55px;font-size:24px!important; margin:5px; border:5px solid #009688;}
+.circle {display:inline-block;border-radius: 50%;width: 55px;height: 55px;font-size:28px!important; margin:5px; border:5px solid #009688;background-color: #bff5ea;}
+.circle.checked {background-color:lightgray;}
+.circle input{display:none}
 @media (max-width:400px){.circle {border-radius: 50%;width: 50px;height: 50px;font-size:24px!important; margin:2px; border:4px solid #009688;}}
 .circle-big {border-radius: 50%;width: 55px;height: 55px;font-size:36px!important;}
-
 @media (max-width:500px){.contrainte {width: 280px}}
+
+.prize-radio {display:inline-block;}
+.prize-radio.checked {background-color:lightgray;}
+.prize-radio input{display:none}
 
 .w3-lobster {
  font-family: "Lobster", serif;
