--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -54,8 +54,8 @@
 
  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
   <script type="text/javascript" charset="utf-8">
-    if(navigator.userAgent.match(/Android/i)) {
-      window.scrollTo(0,1);
+    if (navigator.userAgent.match(/Android/i)) {
+      window.scrollTo(0, 1);
     }
     var socket = io();
     socket.on('connect', function() {
